tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/us-west-2/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-c8d49285",
                    "NetworkAclId": "acl-3ea90f45",
                    "SubnetId": "subnet-04c76d59"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-cad49287",
                    "NetworkAclId": "acl-3ea90f45",
                    "SubnetId": "subnet-6fea2f25"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-c5d49288",
                    "NetworkAclId": "acl-3ea90f45",
                    "SubnetId": "subnet-fb0624d0"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-cbd49286",
                    "NetworkAclId": "acl-3ea90f45",
                    "SubnetId": "subnet-4f449c37"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-3ea90f45",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-bbf2bdc3"
        }
    ]
}
