tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/us-west-2/ec2-describe-subnets.json
{
    "Subnets": [
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-west-2a",
            "AvailabilityZoneId": "usw2-az1",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.16.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-west-2:111111111111:subnet/subnet-4f449c37",
            "SubnetId": "subnet-4f449c37",
            "VpcId": "vpc-bbf2bdc3"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-west-2c",
            "AvailabilityZoneId": "usw2-az3",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.0.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-west-2:111111111111:subnet/subnet-04c76d59",
            "SubnetId": "subnet-04c76d59",
            "VpcId": "vpc-bbf2bdc3"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-west-2d",
            "AvailabilityZoneId": "usw2-az4",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.48.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-west-2:111111111111:subnet/subnet-fb0624d0",
            "SubnetId": "subnet-fb0624d0",
            "VpcId": "vpc-bbf2bdc3"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "us-west-2b",
            "AvailabilityZoneId": "usw2-az2",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.32.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:us-west-2:111111111111:subnet/subnet-6fea2f25",
            "SubnetId": "subnet-6fea2f25",
            "VpcId": "vpc-bbf2bdc3"
        }
    ]
}
